test/error/sema/mut-struct-definition.dsk
let mut S = struct
    x: int
end
